--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "^3.3.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "serialize-javascript": "^2.1.1"
