--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://baspalinckx.github.io/ReactSSR/"",
+  "homepage": "https://baspalinckx.github.io/ReactSSR/",
   "name": "react-ssr",
   "version": "1.0.0",
   "description": "",
